Fix HTML formatting and update content

--- a/index.html
+++ b/index.html
@@ -203,6 +203,10 @@ footer{
     <li>
       <strong>Platform Reporting:</strong><br>
       Use in-app report tools (Discord, VRChat, etc.)
+      You can also Reach out to use Via Discord 
+       <a class="safe-link" href="mailto:https://discord.gg/fSrS9J8AaM">
+          Harm & Online Safety Association Discord
+      
     </li>
     <br>
     <li>
@@ -253,3 +257,4 @@ function showSection(id){
 
 </body>
 </html>
+
